[project]
name = "side-sage"
version = "0.1.0"
description = ""
authors = [
    {name = "mansour",email = "mansour@itsacheckmate.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "neo4j (>=5.28.1,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
